Fix CSS so that audio widget area covers all of control.
Previously, the CSS height setting meant some clicks on the playback widget were not recognized.

--- a/src/annalist_root/annalist/static/css/annalist.css
+++ b/src/annalist_root/annalist/static/css/annalist.css
@@ -319,12 +319,17 @@ div.columns.view-value > div.row > div.columns > select
     /* border: 0; - causes buttons to display differently - WTF? */
 }
 
-div.columns.view-value > audio ,
 div.columns.view-value > input[type="checkbox"]
 {
     margin-top:    0.2rem ;
     margin-bottom: 0.2rem;
     height:        1rem;
+}
+
+div.columns.view-value > audio
+{
+    margin-top:    0.2rem ;
+    margin-bottom: 0.2rem;
 }
 
 div.columns.view-value > span
